fix header weird spacing

--- a/css/overall.css
+++ b/css/overall.css
@@ -12,7 +12,6 @@ div.header .logo {
   height: 40px;
   width: 161px;
   margin-left: 3%;
-  padding-left: 2%;
 }
 
 .header {
@@ -25,7 +24,6 @@ div.header .logo {
 
 div.header .nav {
   margin-left: auto;
-  margin-right: 65px;
 }
 
 div.header .link {
@@ -155,8 +153,6 @@ div.footer .link {
   padding-top: 10px;
   font-size:16px;
 }
-
-
 
 div.footer .address {
   position: absolute;
